@@ -49,6 +49,7 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
+import static org.junit.Assert.assertTrue;
 
 /**
  * Test open and close of regions using zk.
@@ -59,6 +60,7 @@ public class TestZKBasedOpenCloseRegion {
   private static final String TABLENAME = "TestZKBasedOpenCloseRegion";
   private static final byte [][] FAMILIES = new byte [][] {Bytes.toBytes("a"),
     Bytes.toBytes("b"), Bytes.toBytes("c")};
+  private static int countOfRegions;
 
   @BeforeClass public static void beforeAllTests() throws Exception {
     Configuration c = TEST_UTIL.getConfiguration();
@@ -67,8 +69,8 @@ public class TestZKBasedOpenCloseRegion {
     TEST_UTIL.startMiniCluster(2);
     TEST_UTIL.createTable(Bytes.toBytes(TABLENAME), FAMILIES);
     HTable t = new HTable(TEST_UTIL.getConfiguration(), TABLENAME);
-    int countOfRegions = TEST_UTIL.createMultiRegions(t, getTestFamily());
-    waitUntilAllRegionsAssigned(countOfRegions);
+    countOfRegions = TEST_UTIL.createMultiRegions(t, getTestFamily());
+    waitUntilAllRegionsAssigned();
     addToEachStartKey(countOfRegions);
   }
 
@@ -83,6 +85,7 @@ public class TestZKBasedOpenCloseRegion {
         TEST_UTIL.getHBaseCluster().startRegionServer());
 
     }
+    waitUntilAllRegionsAssigned();
   }
 
   /**
@@ -244,7 +247,61 @@ public class TestZKBasedOpenCloseRegion {
     }
   }
 
-  private static void waitUntilAllRegionsAssigned(final int countOfRegions)
+  /**
+   * This test shows how a region won't be able to be assigned to a RS
+   * if it's already "processing" it.
+   * @throws Exception
+   */
+  @Test
+  public void testRSAlreadyProcessingRegion() throws Exception {
+    LOG.info("starting testRSAlreadyProcessingRegion");
+    MiniHBaseCluster cluster = TEST_UTIL.getHBaseCluster();
+
+    HRegionServer hr0 =
+        cluster.getLiveRegionServerThreads().get(0).getRegionServer();
+    HRegionServer hr1 =
+        cluster.getLiveRegionServerThreads().get(1).getRegionServer();
+    HRegionInfo hri = getNonMetaRegion(hr0.getOnlineRegions());
+
+    // fake that hr1 is processing the region
+    hr1.getRegionsInTransitionInRS().add(hri.getEncodedNameAsBytes());
+
+    AtomicBoolean reopenEventProcessed = new AtomicBoolean(false);
+    EventHandlerListener openListener =
+      new ReopenEventListener(hri.getRegionNameAsString(),
+          reopenEventProcessed, EventType.RS_ZK_REGION_OPENED);
+    cluster.getMaster().executorService.
+      registerListener(EventType.RS_ZK_REGION_OPENED, openListener);
+
+    // now ask the master to move the region to hr1, will fail
+    TEST_UTIL.getHBaseAdmin().move(hri.getEncodedNameAsBytes(),
+        Bytes.toBytes(hr1.getServerName()));
+
+    while (!reopenEventProcessed.get()) {
+      Threads.sleep(100);
+    }
+
+    // make sure the region came back
+    assertTrue(hr1.getOnlineRegion(hri.getEncodedNameAsBytes()) == null);
+
+    // remove the block and reset the boolean
+    hr1.getRegionsInTransitionInRS().remove(hri.getEncodedNameAsBytes());
+    reopenEventProcessed.set(false);
+
+    // move the region again, but this time it will work
+    TEST_UTIL.getHBaseAdmin().move(hri.getEncodedNameAsBytes(),
+        Bytes.toBytes(hr1.getServerName()));
+
+    while (!reopenEventProcessed.get()) {
+      Threads.sleep(100);
+    }
+
+    // make sure the region has moved from the original RS
+    assertTrue(hr0.getOnlineRegion(hri.getEncodedNameAsBytes()) == null);
+
+  }
+
+  private static void waitUntilAllRegionsAssigned()
   throws IOException {
     HTable meta = new HTable(TEST_UTIL.getConfiguration(),
       HConstants.META_TABLE_NAME);
@@ -263,7 +320,7 @@ public class TestZKBasedOpenCloseRegion {
       }
       s.close();
       // If I get to here and all rows have a Server, then all have been assigned.
-      if (rows == countOfRegions) {
+      if (rows >= countOfRegions) {
         break;
       }
       LOG.info("Found=" + rows);
