@@ -251,6 +251,7 @@ Release 0.90.3 - Unreleased
    HBASE-3749  Master can't exit when open port failed (gaojinchao)
    HBASE-3794  TestRpcMetrics fails on machine where region server is running
                (Alex Newman)
+   HBASE-3741  Make HRegionServer aware of the regions it's opening/closing
 
   IMPROVEMENTS
    HBASE-3747  ReplicationSource should differanciate remote and local exceptions
